--- a/doc/k6/k6.md
+++ b/doc/k6/k6.md
@@ -1,8 +1,8 @@
-# # IoT Management Telemetry - K6 Testing
+# IoT Management Telemetry - K6 Testing
 
 [Back](../../README.md)
 
-- [# IoT Management Telemetry - K6 Testing](#-iot-management-telemetry---k6-testing)
+- [IoT Management Telemetry - K6 Testing](#iot-management-telemetry---k6-testing)
   - [CI Testing Plan](#ci-testing-plan)
   - [Local Testing](#local-testing)
 
@@ -94,3 +94,5 @@ docker run --rm --name k6_stress --net=app_public_network -p 5665:5665 -e BASE_U
 ```
 
 ---
+
+
