--- a/doc/k6/k6.md
+++ b/doc/k6/k6.md
@@ -5,6 +5,13 @@
 - [IoT Management Telemetry - K6 Testing](#iot-management-telemetry---k6-testing)
   - [CI Testing Plan](#ci-testing-plan)
   - [Local Testing](#local-testing)
+  - [AWS Testing](#aws-testing)
+- [smoke testing](#smoke-testing)
+- [baseline(ramp-up) testing](#baselineramp-up-testing)
+- [load testing (Normal)](#load-testing-normal)
+- [soak testing (Same as load testing but for 8 hours)](#soak-testing-same-as-load-testing-but-for-8-hours)
+- [spike testing](#spike-testing)
+- [stress testing](#stress-testing)
 
 ---
 
@@ -90,9 +97,32 @@ docker run --rm --name k6_spike --net=app_public_network -p 5665:5665 -e BASE_UR
 # stress testing
 docker run --rm --name k6_stress --net=app_public_network -p 5665:5665 -e BASE_URL="http://nginx:8080" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_stress.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_stress.js
 
-
 ```
 
 ---
 
+## AWS Testing
 
+```sh
+# smoke testing
+docker run --rm --name k6_smoke -p 5665:5665 -e BASE_URL="http://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/aws_test_smoke.html -v ./k6/script:/script -v ./k6/report:/report/ grafana/k6 run /script/test_smoke.js
+
+
+# baseline(ramp-up) testing
+docker run --rm --name k6_baseline -p 5665:5665 -e BASE_URL="http://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_baseline.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_baseline.js
+
+
+# load testing (Normal)
+docker run --rm --name k6_baseline -p 5665:5665 -e BASE_URL="http://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_load.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_load.js
+
+
+# soak testing (Same as load testing but for 8 hours)
+docker run --rm --name k6_baseline --net=app_public_network -p 5665:5665 -e BASE_URL="http://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_soak.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_soak.js
+
+
+# spike testing
+docker run --rm --name k6_spike --net=app_public_network -p 5665:5665 -e BASE_URL="http://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_spike.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_spike.js
+
+
+# stress testing
+docker run --rm --name k6_stress --net=app_public_network -p 5665:5665 -e BASE_URL="http://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_stress.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_stress.js
