--- a/doc/k6/k6.md
+++ b/doc/k6/k6.md
@@ -6,7 +6,7 @@
   - [CI Testing Plan](#ci-testing-plan)
   - [Local Testing](#local-testing)
   - [AWS Testing - Dev](#aws-testing---dev)
-  - [AWS Testing - Dev](#aws-testing---dev-1)
+  - [AWS Testing - Prod](#aws-testing---prod)
 
 ---
 
@@ -125,7 +125,7 @@ docker run --rm --name k6_stress -p 5665:5665 -e BASE_URL="https://iot-dev.argus
 
 ---
 
-## AWS Testing - Dev
+## AWS Testing - Prod
 
 ```sh
 # smoke testing
