--- a/doc/k6/k6.md
+++ b/doc/k6/k6.md
@@ -7,6 +7,7 @@
   - [Local Testing](#local-testing)
   - [AWS Testing - Dev](#aws-testing---dev)
   - [AWS Testing - Prod](#aws-testing---prod)
+  - [AWS Testing - HP](#aws-testing---hp)
 
 ---
 
@@ -141,13 +142,29 @@ docker run --rm --name k6_baseline -p 5665:5665 -e BASE_URL="https://iot.arguswa
 
 
 # soak testing (Same as load testing but for 8 hours)
-docker run --rm --name k6_baseline --net=app_public_network -p 5665:5665 -e BASE_URL="http://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_soak.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_soak.js
+docker run --rm --name k6_baseline -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_soak.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_soak.js
 
 
 # spike testing
-docker run --rm --name k6_spike --net=app_public_network -p 5665:5665 -e BASE_URL="http://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_spike.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_spike.js
+docker run --rm --name k6_spike -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_spike.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_spike.js
 
 
 # stress testing
-docker run --rm --name k6_stress --net=app_public_network -p 5665:5665 -e BASE_URL="http://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_stress.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_stress.js
+docker run --rm --name k6_stress -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_stress.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_stress.js
+```
+
+---
+
+## AWS Testing - HP
+
+
+```sh
+# reading
+docker run --rm --name k6_hp_read -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_stress.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_hp_read.js
+
+# write
+docker run --rm --name k6_hp_write -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_stress.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_hp_write.js
+
+# rw
+docker run --rm --name k6_hp_rw -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/test_stress.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_hp_rw.js
 ```
