--- a/doc/k6/k6.md
+++ b/doc/k6/k6.md
@@ -162,7 +162,7 @@ docker run --rm --name k6_stress -p 5665:5665 -e BASE_URL="https://iot.arguswatc
 docker run --rm --name k6_hp_read -p 5665:5665 -e BASE_URL="https://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/aws_test_hp_read.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_hp_read.js
 
 # write
-docker run --rm --name k6_hp_write -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/aws_test_hp_write.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_hp_write.js
+docker run --rm --name k6_hp_write -p 5665:5665 -e BASE_URL="https://iot-dev.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/aws_test_hp_write.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_hp_write.js
 
 # rw
 docker run --rm --name k6_hp_rw -p 5665:5665 -e BASE_URL="https://iot.arguswatcher.net" -e K6_WEB_DASHBOARD=true -e K6_WEB_DASHBOARD_EXPORT=/report/aws_test_hp_rw.html -v ./k6/script:/scripts -v ./k6/report:/report/ grafana/k6 run /scripts/test_hp_rw.js
